<resources>
    <string name="app_name">Caris Wheelchair</string>
    <string name="user_edit_message">User</string>
    <string name="microphone_button_tex">Microphone</string>
    <string name="camera_button_text">Camera</string>
    <string name="imu_button_text">IMU</string>
    <string name="user_edit_message_hint">Enter a username</string>
    <string name="send_button_text">Send</string>
    <string name="default_message">Hello world!</string>
    <string name="title_activity_camera">CameraActivity</string>
<<<<<<< HEAD
    <string name="take_photo_text">Photo</string>
    <string name="record_text">Record</string>
    <string name="play_text">Play</string>
    <string name="stop_text">Stop</string>
    <string name="timestamp_text">Timestamp</string>
    <string name="length_tex">Audio Length</string>
    <string name="default_length_text">00:00</string>
    <string name="date_display_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_save_format">yyyy-MM-dd_HH-mm-ss</string>
    <string name="sd_card_text">SD Card Space</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="app_dir">com.example.caris_wheelchair</string>
    <string name="title_activity_integrated">IntegratedActivity</string>
    <string name="open_integrated_text">Integrated</string>
=======
    <string name="title_activity_imu_data_collection">IMU_data_collection</string>
    <string name="IMU_instruction_2">1. Toggle \'<i>IMU Data Collection</i>\' switch to enable/disable data collection for a single batch \n2. Click the \'<i>New Batch</i>\' button to save the current data batch and start collecting a new batch</string>

>>>>>>> austin/IMU_dev
</resources>
